// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Survey renders cognitive 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Cognitive
  </div>
</div>
`;

exports[`Survey renders external 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="header"
    >
      <span
        className="helpSpacer"
      />
      <div>
        Your Application Assessments
      </div>
      <button
        className="trigger"
        onClick={[Function]}
        type="button"
      >
        <span
          alt="Help"
          className="traitify--icon-fa"
          dangerouslySetInnerHTML={
            {
              "__html": "<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="circle-question" class="svg-inline--fa fa-circle-question" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM169.8 165.3c7.9-22.3 29.1-37.3 52.8-37.3h58.3c34.9 0 63.1 28.3 63.1 63.1c0 22.6-12.1 43.5-31.7 54.8L280 264.4c-.2 13-10.9 23.6-24 23.6c-13.3 0-24-10.7-24-24V250.5c0-8.6 4.6-16.5 12.1-20.8l44.3-25.4c4.7-2.7 7.6-7.7 7.6-13.1c0-8.4-6.8-15.1-15.1-15.1H222.6c-3.4 0-6.4 2.1-7.5 5.3l-.4 1.2c-4.4 12.5-18.2 19-30.6 14.6s-19-18.2-14.6-30.6l.4-1.2zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"></path></svg>",
            }
          }
        />
      </button>
    </div>
    <p
      className="traitify--markdown"
    >
      As part of your application, we'd like to ask you to complete the following assessments. Please click on the button next to the assessment name. This will take you to where you'll complete the assessment(s). Please return here once you've completed all assessments.
    </p>
    <div
      className="assessment"
    >
      <div>
        <span
          className="text"
        >
          external-survey-name
        </span>
      </div>
      <a
        href="https://api.traitify.com/beta/assessments/external_assessments/sign_in/external-xyz?token=test-token"
        onClick={[Function]}
      >
        Start Assessment
      </a>
    </div>
  </div>
</div>
`;

exports[`Survey renders personality 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Personality
  </div>
</div>
`;

exports[`Survey renders rjp 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    RJP
  </div>
</div>
`;
